// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`data-import controller util functions tests prepRecords test - remove leading/trailing whitespace in category values 1`] = `
[
  {
    "categories": [
      {
        "name": "Title",
        "subcategories": [
          {
            "name": "Subtitle",
            "subcategories": [],
            "value": "subtitle 1",
          },
        ],
        "value": "title 1",
      },
      {
        "name": "Artists",
        "subcategories": [],
        "value": "artists 1",
      },
    ],
    "collectionName": "collection",
  },
]
`;

exports[`data-import controller util functions tests prepRecords test - remove leading/trailing whitespace in each part of full category name 1`] = `
[
  {
    "categories": [
      {
        "name": "Title",
        "subcategories": [
          {
            "name": "Subtitle",
            "subcategories": [],
            "value": "subtitle 1",
          },
        ],
        "value": "title 1",
      },
      {
        "name": "Artists",
        "subcategories": [],
        "value": "artists 1",
      },
    ],
    "collectionName": "collection",
  },
]
`;

exports[`data-import controller util functions tests prepRecords test - skipped category values in some records 1`] = `
[
  {
    "categories": [
      {
        "name": "Title",
        "subcategories": [],
        "value": "title 1",
      },
      {
        "name": "Artists",
        "subcategories": [],
        "value": "",
      },
      {
        "name": "Release Year",
        "subcategories": [],
        "value": "release year 1",
      },
    ],
    "collectionName": "collection",
  },
  {
    "categories": [
      {
        "name": "Title",
        "subcategories": [],
        "value": "",
      },
      {
        "name": "Artists",
        "subcategories": [],
        "value": "artists 2",
      },
      {
        "name": "Release Year",
        "subcategories": [],
        "value": "release year 2",
      },
    ],
    "collectionName": "collection",
  },
  {
    "categories": [
      {
        "name": "Title",
        "subcategories": [],
        "value": "title 3",
      },
      {
        "name": "Artists",
        "subcategories": [],
        "value": "",
      },
      {
        "name": "Release Year",
        "subcategories": [],
        "value": "",
      },
    ],
    "collectionName": "collection",
  },
]
`;

exports[`data-import controller util functions tests prepRecords test - three levels deep data 1`] = `
[
  {
    "categories": [
      {
        "name": "Title",
        "subcategories": [
          {
            "name": "Subtitle",
            "subcategories": [
              {
                "name": "Subsubtitle",
                "subcategories": [],
                "value": "subsubtitle 1",
              },
            ],
            "value": "subtitle 1",
          },
        ],
        "value": "title 1",
      },
    ],
    "collectionName": "collection",
  },
]
`;

exports[`data-import controller util functions tests prepRecords test - trim all whitespace category values to empty string 1`] = `
[
  {
    "categories": [
      {
        "name": "Title",
        "subcategories": [
          {
            "name": "Subtitle",
            "subcategories": [],
            "value": "",
          },
        ],
        "value": "title 1",
      },
      {
        "name": "Artists",
        "subcategories": [],
        "value": "",
      },
    ],
    "collectionName": "collection",
  },
]
`;

exports[`data-import controller util functions tests prepRecords test - unusual column order 1`] = `
[
  {
    "categories": [
      {
        "name": "Title",
        "subcategories": [
          {
            "name": "Subtitle",
            "subcategories": [
              {
                "name": "Subsubtitle",
                "subcategories": [],
                "value": "subsubtitle 1",
              },
            ],
            "value": "subtitle 1",
          },
        ],
        "value": "title 1",
      },
    ],
    "collectionName": "collection",
  },
]
`;
